fix: symbols blocks overflow the layout

--- a/dokka-subprojects/plugin-base/src/main/resources/dokka/styles/style.css
+++ b/dokka-subprojects/plugin-base/src/main/resources/dokka/styles/style.css
@@ -514,7 +514,7 @@ Just in case of possible performance degradation it excluding tabs with briefs o
 
 @media print, (min-width: 960px) {
     .keyValue {
-        grid-template-columns: 20% 80%;
+        grid-template-columns: 1fr 4fr;
     }
 
     .keyValue > div:first-child {
